--- a/Sorting_Problems_1/CMakeLists.txt
+++ b/Sorting_Problems_1/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
-project(other)
+project(Sorting_Problems_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(other steroids.cpp)
+add_executable(other robber.cpp)
